# mtrx

./: .clang-format  .gitignore  meson.build  meson_options.txt  readme.adoc
.github/workflows/: ci.yaml
data/: config.toml
src/: config.cc  config.h  const.h.in  log.cc  log.h  main.cc  meson.build
src/udp2p/: manager.cc  manager.h  meson.build  peer.cc  peer.h  server.cc  server.h  udp2p.cc  udp2p.h
src/utils/: crypto.cc  crypto.h  log.cc  log.h  meson.build  misc.cc  misc.h
subprojects/: zpp_bits.wrap
test/: meson.build  test.cc  test_log.cc  test_utils.cc
